--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
     "express": "^4.21.2",
     "express-session": "^1.18.1",
     "jsonwebtoken": "^9.0.2",
+    "memorystore": "^1.6.7",
     "mongoose": "^8.12.1",
     "passport": "^0.7.0",
     "passport-github2": "^0.1.12",
